# enterprise-knowledge-platform-dev

./: .gitignore  LICENSE  README.md  RESUME-GUIDE.md  SKILL.md  pyproject.toml  workflow.js
examples/: sample-build.md
memory/: PROJECT_CONTEXT.example.md
prompts/: claude-build.md  claude-review.md  codex-accept.md  codex-plan.md
schemas/: accept.schema.json  plan.schema.json  review.schema.json
src/pdf_table_search/: __init__.py  cli.py  errors.py  extract.py  query.py
tests/: conftest.py  test_cli_errors.py  test_extract.py  test_query.py
tests/fixtures/query/: orders.tables.json  people.tables.json
